2008-07-19  Brian Pepple  <bpepple@fedoraproject.org>

	* data/twitux.schemas.in:
	* src/twitux.h:
	* src/twitux-account-dialog.c: Add service combo to account dialog.

2008-07-18  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* data/account_dlg.xml:
	* src/twitux.h: Start to add support for identi.ca.

2008-05-10  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c (parser_convert_time): Fix time issue
	w/ "1 hour" & "1 minute".  Patch by Derick Rethans. (#1961570)

2008-04-29  Daniel Morales  <daniminas@gmail.com>

	* Release 0.62.

2008-04-23  Daniel Morales  <daniminas@gmail.com>

	* data/list_dlg.xml:
	* src/twitux-lists-dialog.c: Retrive users
	timelines.

	* po/POTFILES.in: Fix XML filetypes.

2008-04-22  Daniel Morales  <daniminas@gmail.com>

	* data/lists_dialog.glade:
	* data/lists_dlg.xml:
	* src/twitux-lists-dialog.c: Add and remove users to follow.

2008-04-20  Daniel Morales  <daniminas@gmail.com>

	* data/lists_dlg.xml:
	* data/glade/lists_dialog.glade:
	* src/twitux-lists-dialog.[ch]: New files.

	* data/Makefile.am:
	* src/twitux-network.c:
	* src/Makefile.am:
	* src/twitux-app.c: Add lists dialog. It's very simple now, 
	but i think we can add some interesting functions.

2008-04-16  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-xml.[ch]: Removed

	* libtwitux/twitux-xml.[ch]:
	* libtwitux/Makefile.am:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-app.c:
	* src/twitux-add-dialog.c:
	* src/twitux-account-dialog.c:
	* src/Makefile.am: Move the gtkbuilder code to libtwitux.

2008-04-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-tweet-list.c: Use only the gtk header needed.
	
2008-04-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-glade.[ch]: Removed.

	* configure.in:
	* data/main_window.xml:
	* po/POTFILES.in:
	* src/twitux-app.c:
	* src/twitux-network.c:
	* src/Makefile.am: Finish converting to