@@ -69,6 +69,9 @@ struct _TwituxAppPriv {
 	TwituxTweetList   *listview;
 	GtkWidget         *statusbar;
 
+	/* Micro-Blogging service used */
+	gchar             *service;
+
 	/*
 	 * Widgets that are enabled when
 	 * we are connected/disconnected
@@ -203,6 +206,7 @@ twitux_app_init (TwituxApp *singleton_app)
 
 	priv = GET_PRIV (app);
 
+	priv->service = NULL;
 	priv->widgets_connected = NULL;
 	priv->widgets_disconnected = NULL;
 	priv->group = NULL;
@@ -219,6 +223,10 @@ app_finalize (GObject *object)
 
 	if (priv->size_timeout_id) {
 		g_source_remove (priv->size_timeout_id);
+	}
+
+	if (priv->service) {
+		g_free (priv->service);
 	}
 
 	g_list_free (priv->widgets_connected);
@@ -286,7 +294,7 @@ app_setup (void)
 	 * to be done before connecting signals.
 	 */
 	twitux_conf_get_string (conf,
-							TWITUX_PREFS_TWEETS_HOME_TIMELINE,
+							TWITUX_PREFS_TWEETS_DEFAULT_TIMELINE,
 							&timeline);
 	app_set_default_timeline (app, timeline);
 	g_free (timeline);
@@ -533,8 +541,17 @@ static void
 app_disconnect_cb (GtkWidget *widget,
 				   TwituxApp *app)
 {
+	TwituxAppPriv *priv;
+
+	priv = GET_PRIV (app);
+
 	twitux_network_logout ();
 	twitux_app_state_on_connection (FALSE);
+
+	if (priv->service) {
+		g_free (priv->service);
+		priv->service = NULL;
+	}
 }
 
 static void
@@ -588,8 +605,16 @@ app_public_timeline_cb (GtkRadioAction *action,
 
 	priv = GET_PRIV (app);
 
-	if (priv->menu_public == current)
-		twitux_network_get_timeline (TWITUX_API_TIMELINE_PUBLIC);
+	if (priv->menu_public == current) {
+		if (strcmp (priv->service, SERVICE_TWITTER) == 0) {
+			twitux_network_get_timeline (TWITUX_API_TIMELINE_PUBLIC);
+		} else if (strcmp (priv->service, SERVICE_IDENTICA) == 0) {
+			twitux_network_get_timeline (IDENTICA_API_TIMELINE_PUBLIC);
+		} else {
+			twitux_debug (DEBUG_DOMAIN_SETUP, "Unknown micro-blogging service: %s",
+						  priv->service);
+		}
+	}
 }
 
 static void
@@ -601,8 +626,16 @@ app_friends_timeline_cb (GtkRadioAction *action,
 
 	priv = GET_PRIV (app);
 
-	if (priv->menu_friends == current) 
-		twitux_network_get_timeline (TWITUX_API_TIMELINE_FRIENDS);
+	if (priv->menu_friends == current) {
+		if (strcmp (priv->service, SERVICE_TWITTER) == 0) {
+			twitux_network_get_timeline (TWITUX_API_TIMELINE_FRIENDS);
+		} else if (strcmp (priv->service, SERVICE_IDENTICA) == 0) {
+			twitux_network_get_timeline (IDENTICA_API_TIMELINE_FRIENDS);
+		} else {
+			twitux_debug (DEBUG_DOMAIN_SETUP, "Unknown micro-blogging service: %s",
+						  priv->service);
+		}
+	}
 }
 
 static void
@@ -653,8 +686,16 @@ app_twitux_timeline_cb (GtkRadioAction *action,
 
 	priv = GET_PRIV (app);
 
-	if (priv->menu_twitux == current)
-		twitux_network_get_timeline (TWITUX_API_TIMELINE_TWITUX);
+	if (priv->menu_twitux == current) {
+		if (strcmp (priv->service, SERVICE_TWITTER) == 0) {
+			twitux_network_get_timeline (TWITUX_API_TIMELINE_TWITUX);
+		} else if (strcmp (priv->service, SERVICE_IDENTICA) == 0) {
+			twitux_network_get_timeline (IDENTICA_API_TIMELINE_TWITUX);
+		} else {
+			twitux_debug (DEBUG_DOMAIN_SETUP, "Unknown micro-blogging service: %s",
+						  priv->service);
+		}
+	}
 }
 
 static void
@@ -878,7 +919,18 @@ app_login (TwituxApp *a)
 	
 	priv = GET_PRIV (a);
 
+	if (priv->service) {
+		g_free (priv->service);
+		priv->service = NULL;
+	}
+
 	conf = twitux_conf_get ();
+
+	/* Get the micro-blogging service */
+	twitux_conf_get_string (conf,
+							TWITUX_PREFS_AUTH_SERVICE,
+							&priv->service);
+
 	twitux_conf_get_string (conf,
 							TWITUX_PREFS_AUTH_USER_ID,
 							&username);
@@ -897,6 +949,7 @@ app_login (TwituxApp *a)
 							&password);
 #endif
 
+	/* Micro-blogging should be defined, so for now let's not check for it */
 	if (G_STR_EMPTY (username) || G_STR_EMPTY (password)) {
 		twitux_account_dialog_show (GTK_WINDOW (priv->window));
 	} else {
@@ -917,21 +970,21 @@ app_set_default_timeline (TwituxApp *app, gchar *timeline)
 {
 	TwituxAppPriv *priv;
 
-	priv = GET_PRIV (app);
-
 	/* This shouldn't happen, but just in case */
 	if (G_STR_EMPTY (timeline)) {
-		g_warning ("Default timeline in not set");
+		g_warning ("Default timeline in not set\n");
 		return;
 	}
 
-	if (strcmp (timeline, TWITUX_API_TIMELINE_FRIENDS) == 0) {
+	priv = GET_PRIV (app);
+
+	if (strcmp (timeline, VIEW_FRIENDS) == 0) {
 		gtk_radio_action_set_current_value (priv->menu_friends,	1);
-	} else if (strcmp (timeline, TWITUX_API_TIMELINE_PUBLIC) == 0) {
+	} else if (strcmp (timeline, VIEW_PUBLIC) == 0) {
 		gtk_radio_action_set_current_value (priv->menu_public, 1);
-	} else if (strcmp (timeline, TWITUX_API_TIMELINE_MY) == 0) {
+	} else if (strcmp (timeline, VIEW_MINE) == 0) {
 		gtk_radio_action_set_current_value (priv->menu_mine, 1);
-	} else if (strcmp (timeline, TWITUX_API_TIMELINE_TWITUX) == 0) {
+	} else if (strcmp (timeline, VIEW_TWITUX) == 0) {
 		gtk_radio_action_set_current_value (priv->menu_twitux, 1);
 	} else {
 		/* Let's fallback to friends timeline */
@@ -948,16 +1001,25 @@ app_retrieve_default_timeline (void)
 
 	priv = GET_PRIV (app);
 
-	twitux_conf_get_string (twitux_conf_get (),
-							TWITUX_PREFS_TWEETS_HOME_TIMELINE,
-							&timeline);
-
-	if (G_STR_EMPTY (timeline)){
-		timeline = g_strdup (TWITUX_API_TIMELINE_FRIENDS);
-		app_set_default_timeline (app, TWITUX_API_TIMELINE_FRIENDS);
+	if (!twitux_conf_get_string (twitux_conf_get (),
+								 TWITUX_PREFS_TWEETS_DEFAULT_TIMELINE,
+								 &timeline)) {
+		return;
 	}
 
-	twitux_network_get_timeline (timeline);
+	if (strcmp (priv->service, SERVICE_TWITTER) == 0) {
+		if (strcmp (timeline, VIEW_FRIENDS) == 0) {
+			twitux_network_get_timeline (TWITUX_API_TIMELINE_FRIENDS);
+		} else if (strcmp (timeline, VIEW_PUBLIC) == 0) {
+			twitux_network_get_timeline (TWITUX_API_TIMELINE_PUBLIC);
+		}
+	} else if (strcmp (priv->service, SERVICE_IDENTICA) == 0) {
+		if (strcmp (timeline, VIEW_FRIENDS) == 0) {
+			twitux_network_get_timeline (IDENTICA_API_TIMELINE_FRIENDS);
+		} else if (strcmp (timeline, VIEW_PUBLIC) == 0) {
+			twitux_network_get_timeline (IDENTICA_API_TIMELINE_PUBLIC);
+		}
+	}
 	g_free (timeline);
 }
 
